--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,5 @@
 @import 'layout/nav';
 @import 'layout/sidebar';
 @import 'layout/slider';
+@import 'layout/sections';
+@import 'layout/main-content';
