--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -1,8 +1,12 @@
 .sidebar-facebook {
     background-color: #405D9A;
-    width: 40px;
-    height: 240px;
+    width: 4rem;
+    height: 24rem;
+    //position: fixed;
+
     position: fixed;
+    top: 30%;
+    z-index: 999999;
     cursor: pointer;
 
     &__span {
