--- a/sass/layout/_slider.scss
+++ b/sass/layout/_slider.scss
@@ -1,8 +1,8 @@
 .slider-container{
-    max-width: 80%;
+    max-width: 75%;
     margin: auto;
     margin-top: 4rem;
-    padding: 1rem 2rem;
+    padding: .5rem 1rem;
     border: .2rem solid rgb(231, 231, 231);
     &__img{
         max-width: 100%;
