--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -100,6 +100,11 @@
         left: 24.5rem;
         bottom: 11.5rem;
     }
+    &--3{
+        //submenu 3
+        left: 24.5rem;
+        bottom: 0;
+    }
 }
 
 .list-nav {
