--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -40,17 +40,57 @@
     &__content-box {
         display: flex;
         justify-content: space-between;
-      
+        flex-wrap: wrap;
         margin-left: 10rem;
     }
-
-    
 
     &__box {
         display: flex;
         flex-direction: column;
         align-items: center;
-       
-        
+        margin-right: 3rem;
+        padding: 2rem 0;
+
+        &:last-child {
+            margin-right: 0;
+            max-width: 30rem;
+        }
+
+
     }
+
+    &__title-box {
+        margin: 0 0 2.5rem 0;
+        &--view-counter {
+            font-size: 2.6rem;
+            font-weight: normal;
+            
+        }
+    }
+
+    &__list {
+        margin: 0;
+        list-style: none;
+        text-align: center;
+
+        &--show-list {
+            list-style: disc;
+            text-align: left;
+
+            li {
+                margin-bottom: .8rem;
+            }
+        }
+    }
+
+    &__links {
+        &:hover {
+            text-decoration: none;
+            color: red;
+        }
+    }
+
+
+
+
 }
