--- a/styles/main.css
+++ b/styles/main.css
@@ -124,6 +124,10 @@ body {
   left: 24.5rem;
   bottom: 11.5rem;
 }
+.sub-menu--3 {
+  left: 24.5rem;
+  bottom: 0;
+}
 
 .list-nav li:hover > ul {
   display: block;
@@ -195,12 +199,42 @@ body {
 .more-info__content-box {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-left: 10rem;
 }
 .more-info__box {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-right: 3rem;
+  padding: 2rem 0;
+}
+.more-info__box:last-child {
+  margin-right: 0;
+  max-width: 30rem;
+}
+.more-info__title-box {
+  margin: 0 0 2.5rem 0;
+}
+.more-info__title-box--view-counter {
+  font-size: 2.6rem;
+  font-weight: normal;
+}
+.more-info__list {
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+.more-info__list--show-list {
+  list-style: disc;
+  text-align: left;
+}
+.more-info__list--show-list li {
+  margin-bottom: 0.8rem;
+}
+.more-info__links:hover {
+  text-decoration: none;
+  color: red;
 }
 
 .main-edu-offert__container-content {
@@ -231,6 +265,53 @@ body {
 .main-edu-offert__link-to-info:hover {
   color: red;
   text-decoration: none;
+}
+
+.site-footer {
+  display: flex;
+  flex-direction: column;
+  border-top: 0.1rem solid #dbdbdb;
+  padding: 1rem 0 3rem 0;
+  margin-top: 8rem;
+}
+.site-footer__social-media-icon {
+  color: black;
+  font-size: 2.5rem;
+}
+.site-footer__social-media-icon:hover {
+  color: #dd3811;
+}
+.site-footer__title {
+  margin: 0;
+}
+.site-footer__span {
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+}
+.site-footer__span a {
+  margin-left: 0.9rem;
+  margin-right: 0.9rem;
+}
+.site-footer__span a:last-child {
+  margin-left: 0.9rem;
+}
+.site-footer__link {
+  color: #000000;
+}
+.site-footer__link:hover {
+  text-decoration: none;
+  color: #dd3811;
+}
+.site-footer__button {
+  border: 1px solid #747474;
+  color: #747474;
+  padding: 0 2px 1px 2px;
+  text-decoration: none;
+}
+.site-footer__button:hover {
+  background-color: #747474;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=main.css.map */
