--- a/sass/layout/_slider.scss
+++ b/sass/layout/_slider.scss
@@ -8,3 +8,15 @@
         max-width: 100%;
     }
 }
+
+@media(max-width:782px) {
+    .slider-container{
+        margin-top: 7.8rem;
+    }
+}
+
+@media(max-width:768px){
+    .slider-container{
+        max-width: 86%;
+    }
+}
