--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,14 @@ body {
   padding-bottom: 5rem;
 }
 
+.form-search {
+  display: none;
+}
+
+#menu-check {
+  display: none;
+}
+
 .container-page {
   background-color: #ffffff;
   max-width: 81%;
@@ -30,6 +38,17 @@ body {
   margin-top: 3rem;
 }
 
+@media (max-width: 1047px) {
+  body {
+    padding: 0;
+    margin: 0;
+  }
+
+  .container-page {
+    margin-top: 0;
+    max-width: 100%;
+  }
+}
 .header-nav {
   max-width: 90.9%;
   margin: auto;
@@ -120,6 +139,12 @@ body {
 .sub-menu .arrow-right {
   margin-left: 3rem;
 }
+.sub-menu .arrow-right.sports {
+  margin-left: 12.5rem;
+}
+.sub-menu .arrow-right.culture {
+  margin-left: 12.5rem;
+}
 .sub-menu--2 {
   left: 24.5rem;
   bottom: 11.5rem;
@@ -128,11 +153,82 @@ body {
   left: 24.5rem;
   bottom: 0;
 }
+.sub-menu--4 {
+  left: 24.5rem;
+  bottom: -7rem;
+}
 
 .list-nav li:hover > ul {
   display: block;
 }
 
+@media (max-width: 782px) {
+  .header-nav {
+    max-width: 100%;
+    background-color: #3A3A3A;
+    padding: 1rem;
+  }
+  .header-nav__logo {
+    display: none;
+  }
+  .header-nav__nav {
+    margin-top: 0;
+    display: none;
+  }
+
+  .list-nav {
+    display: none;
+  }
+
+  .content-box-menu {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .form-search {
+    display: block;
+  }
+  .form-search__input-box {
+    display: flex;
+    align-items: center;
+    background-color: #D0D0D0;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+  }
+  .form-search__icon-search {
+    font-size: 1.6rem;
+    margin-right: 0.5rem;
+  }
+  .form-search__input {
+    background-color: transparent;
+    outline: none;
+    width: 100%;
+    border: 0;
+  }
+  .form-search__input:focus {
+    width: 41rem;
+  }
+
+  .button-menu {
+    background-color: transparent;
+    color: #ffff;
+    display: flex;
+    align-items: center;
+    border: none;
+    outline: none;
+  }
+  .button-menu__icon-button {
+    font-size: 1.7rem;
+    margin-right: 0.6em;
+  }
+  .button-menu__text-button {
+    font-size: 1.4rem;
+  }
+}
 .sidebar-facebook {
   background-color: #405D9A;
   width: 4rem;
@@ -155,6 +251,11 @@ body {
   -o-transform: rotate(90deg);
 }
 
+@media (max-width: 1047px) {
+  .sidebar-facebook {
+    top: 41%;
+  }
+}
 .slider-container {
   max-width: 75%;
   margin: auto;
@@ -166,6 +267,16 @@ body {
   max-width: 100%;
 }
 
+@media (max-width: 782px) {
+  .slider-container {
+    margin-top: 7.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .slider-container {
+    max-width: 86%;
+  }
+}
 .section-about {
   display: flex;
   flex-direction: column;
@@ -237,6 +348,38 @@ body {
   color: red;
 }
 
+@media (max-width: 1048px) {
+  .more-info__content-box {
+    margin-left: 0;
+  }
+}
+@media (max-width: 768px) {
+  .section-about__content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-about__content-internal-links {
+    margin-bottom: 2.5rem;
+  }
+  .section-about__img {
+    max-width: 100%;
+  }
+
+  .more-info__content-box {
+    flex-direction: column;
+    align-items: center;
+  }
+  .more-info__box {
+    width: 80%;
+    border-bottom: 0.6rem solid #D3D3D3;
+  }
+  .more-info__box:last-child {
+    border: 0;
+  }
+  .more-info__list {
+    padding: 0;
+  }
+}
 .main-edu-offert__container-content {
   max-width: 95%;
   margin: auto;
@@ -267,6 +410,13 @@ body {
   text-decoration: none;
 }
 
+@media (max-width: 768px) {
+  .main-edu-offert__box {
+    max-width: 65%;
+    margin: auto;
+    margin-bottom: 4rem;
+  }
+}
 .site-footer {
   display: flex;
   flex-direction: column;
@@ -312,6 +462,18 @@ body {
 .site-footer__button:hover {
   background-color: #747474;
   color: #ffffff;
+}
+
+@media (max-width: 768px) {
+  .site-footer__title {
+    font-size: 2.3rem;
+  }
+  .site-footer__social-media-icon {
+    font-size: 3rem;
+  }
+  .site-footer__span {
+    font-size: 1.5rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
