--- a/sass/layout/_slider.scss
+++ b/sass/layout/_slider.scss
@@ -4,14 +4,18 @@
     margin-top: 4rem;
     padding: .5rem 1rem;
     border: .2rem solid rgb(231, 231, 231);
+    
     &__img{
         max-width: 100%;
     }
 }
 
 @media(max-width:782px) {
+    body{
+        background-color: #ffffff;
+    }
     .slider-container{
-        margin-top: 7.8rem;
+       margin-top: 7.8rem;
     }
 }
 
