--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -165,6 +165,7 @@
 
     .form-search {
         display: block;
+        max-width: 40%;
 
         &__input-box {
             display: flex;
@@ -186,7 +187,8 @@
 
         }
 
-        &__input { //Problema de proporcion en responsiv
+        &__input {
+            //Problema de proporcion en responsiv
             background-color: transparent;
             outline: none;
             width: 100%;
@@ -231,25 +233,18 @@
             width: 100%;
             top: 4rem;
             right: 0;
-
             background-color: #3A3A3A;
+
+            overflow: auto;
+            overflow-x: hidden;
 
             .list-nav__items {
                 margin-left: 6rem;
-            }
 
-            ul {
-                flex-direction: column;
-                margin: 0;
-                //  overflow: auto;
 
-            }
-
-            li {
                 .list-nav__links {
                     color: #ffff;
                     font-size: 1.7rem;
-
 
                     &--inicio {
                         display: block;
@@ -267,6 +262,7 @@
                         text-transform: capitalize;
                     }
 
+                    
                 }
 
                 &:first-child {
@@ -274,7 +270,58 @@
                 }
             }
 
+            .list-nav {
+                flex-direction: column;
+                margin: 0;
+
+                //spacing for submenu
+                &__items{
+                    &--spacing-top{
+                        margin-top: 20rem;
+                    }
+                }
+
+                &__icon-arrow{
+                    &--right{
+                        display: none;
+                    }
+                   
+                }
+
+
+
+            }
+
+            .sub-menu{
+                display: block;
+                position: static;
+                &__link{
+                    background-color:transparent;
+                    color: #ffff;
+                    font-size: 1.7rem;
+                    border: 0;
+                    padding: 0;
+                    margin-left: 5rem;
+                    margin-bottom: 1.5rem;
+                    text-transform: capitalize;
+                    width: 100%;
+
+                    &--uppercase{
+                        text-transform:  uppercase;
+                    }
+
+              
+                }
+
+           
+                
+            }
+
+
+
         }
+
+       
     }
 
 
