--- a/styles/main.css
+++ b/styles/main.css
@@ -184,6 +184,7 @@ body {
 
   .form-search {
     display: block;
+    max-width: 40%;
   }
   .form-search__input-box {
     display: flex;
@@ -235,19 +236,17 @@ body {
     top: 4rem;
     right: 0;
     background-color: #3A3A3A;
+    overflow: auto;
+    overflow-x: hidden;
   }
   #menu-check:checked ~ .header-nav__nav .list-nav__items {
     margin-left: 6rem;
   }
-  #menu-check:checked ~ .header-nav__nav ul {
-    flex-direction: column;
-    margin: 0;
-  }
-  #menu-check:checked ~ .header-nav__nav li .list-nav__links {
+  #menu-check:checked ~ .header-nav__nav .list-nav__items .list-nav__links {
     color: #ffff;
     font-size: 1.7rem;
   }
-  #menu-check:checked ~ .header-nav__nav li .list-nav__links--inicio {
+  #menu-check:checked ~ .header-nav__nav .list-nav__items .list-nav__links--inicio {
     display: block;
     padding: 1rem 3.5rem;
     background-color: #117BB8;
@@ -257,11 +256,39 @@ body {
     font-weight: normal;
     text-transform: capitalize;
   }
-  #menu-check:checked ~ .header-nav__nav li .list-nav__links--capitalize {
+  #menu-check:checked ~ .header-nav__nav .list-nav__items .list-nav__links--capitalize {
     text-transform: capitalize;
   }
-  #menu-check:checked ~ .header-nav__nav li:first-child {
+  #menu-check:checked ~ .header-nav__nav .list-nav__items:first-child {
     margin: 0;
+  }
+  #menu-check:checked ~ .header-nav__nav .list-nav {
+    flex-direction: column;
+    margin: 0;
+  }
+  #menu-check:checked ~ .header-nav__nav .list-nav__items--spacing-top {
+    margin-top: 20rem;
+  }
+  #menu-check:checked ~ .header-nav__nav .list-nav__icon-arrow--right {
+    display: none;
+  }
+  #menu-check:checked ~ .header-nav__nav .sub-menu {
+    display: block;
+    position: static;
+  }
+  #menu-check:checked ~ .header-nav__nav .sub-menu__link {
+    background-color: transparent;
+    color: #ffff;
+    font-size: 1.7rem;
+    border: 0;
+    padding: 0;
+    margin-left: 5rem;
+    margin-bottom: 1.5rem;
+    text-transform: capitalize;
+    width: 100%;
+  }
+  #menu-check:checked ~ .header-nav__nav .sub-menu__link--uppercase {
+    text-transform: uppercase;
   }
 }
 .sidebar-facebook {
@@ -401,7 +428,7 @@ body {
     margin-bottom: 2.5rem;
   }
   .section-about__img {
-    max-width: 100%;
+    max-width: 85%;
   }
 
   .more-info__content-box {
@@ -409,7 +436,7 @@ body {
     align-items: center;
   }
   .more-info__box {
-    width: 80%;
+    width: 85%;
     border-bottom: 0.6rem solid #D3D3D3;
   }
   .more-info__box:last-child {
@@ -451,7 +478,7 @@ body {
 
 @media (max-width: 768px) {
   .main-edu-offert__box {
-    max-width: 65%;
+    max-width: 85%;
     margin: auto;
     margin-bottom: 4rem;
   }
